[package]
name = "plonky3_oracle"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "DNAC-ZK Plonky3 reference oracle — emits test vectors for C primitives to byte-match against."
publish = false

# Plonky3 dependencies pinned to commit 82cfad73 (2026-05-20).
# Per dnac/docs/plans/2026-05-21-stark-range-proof-keccak-design.md header pin.
# DO NOT bump without a design-doc revision and full test-vector re-validation.
[dependencies]
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
# Direct deps added in Phase T1 (transcript oracle). Already transitively
# pulled via p3-fri; declared here to be importable. Same commit pin.
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
# Added Stage M1 (merkle/mmcs oracle, 2026-05-27). Same commit pin.
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
# Added P2 (stark-priming oracle, 2026-05-30) — real p3_uni_stark::prove over a
# vendored FibonacciAir. Same commit pin. Default features (no `parallel`); pow=0
# in the FRI params keeps `prove` grind-free and byte-deterministic.
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }
# FP1c.2 — poseidon2-air trace generation oracle. Same commit pin. Provides
# generate_trace_rows + RoundConstants for the Poseidon2Cols<8,7,1,4,22> layout.
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "82cfad73cd734d37a0d51953094f970c531817ec" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# is_zk=1 (hiding) prover path — M1 sandbox confidential milestone (2026-07-13).
# SmallRng seeds the MerkleTreeHidingMmcs leaf-salt + HidingFriPcs random
# codewords. rand 0.10.1 is ALREADY in Cargo.lock (transitive via
# p3-merkle-tree); this only makes it directly importable. default-features
# = false matches the Plonky3 workspace pin (Cargo.toml:80). Determinism:
# seed_from_u64(1) gives a byte-stable KAT (the C verifier never sees the
# seed; real proving would use OS entropy).
rand = { version = "0.10.0", default-features = false, features = ["alloc"] }

# SHA3-512 for Merkle / transcript / commitment hashing. The `sha3` crate
# implements FIPS-202 verbatim — same standard DNAC's crypto/hash/qgp_sha3.c
# wraps via OpenSSL. Cross-validation gate: both implementations are FIPS-202
# compliant, so a byte-identity check is meaningful.
sha3 = "0.10"

[profile.release]
# Determinism flags. lto=fat for stable layout; codegen-units=1 to avoid
# parallel codegen non-determinism.
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "none"

# Aggressive reproducibility: pin the dep graph fully at build time.
# Cargo.lock will be committed once first build succeeds on a Rust-equipped host.
